[tool.poetry]
name = "isublime"
version = "0.1.0"
description = "iSublime uploads files to iCloud"
authors = ["Honza Javorek <mail@honzajavorek.cz>"]

[tool.poetry.scripts]
isublime = "isublime:main"

[tool.poetry.dependencies]
python = "^3.9"
pyicloud = "^1.0.0"
click = "^8.1.3"
gevent = "^22.8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--ff"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
